Prueba de tecleo mejorada 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<header>
-  <h1> {{title}} aplicacion esta en Marcha!!</h1>
-</header>
-
+<app-cabecera></app-cabecera>
 <router-outlet></router-outlet>
-
-<app-tecleo></app-tecleo>
+<!-- <app-tecleo></app-tecleo> -->
 <app-pie></app-pie>
